Complete system configuration and wiring
- Enhanced upload middleware to support all Phase 2 routes (policies, training, student-guides, security-incidents, support, research)
- Added video file support for training resources
- Sanitized filenames for security
- Created comprehensive .env.example with all Phase 2 configurations
- Created config.js utility for centralized environment variable access
- Created database seeder with sample data for all user roles
- Updated package.json to v2.0.0 with seeder scripts (seed, seed:clear, db:reset)
- Created comprehensive SETUP-GUIDE.md with installation and deployment instructions
- All routes properly wired and configured in server/index.js
- File upload folders auto-created for all modules
- Ready for production deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-{
+﻿{
     "name": "vanuatu-examination-portal",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "Comprehensive Examination and Assessment Unit Portal for Vanuatu",
     "main": "server/index.js",
     "scripts": {
@@ -9,13 +9,18 @@
         "client": "cd client && npm run dev",
         "build": "cd client && npm run build",
         "start": "node server/index.js",
-        "install-all": "npm install && cd client && npm install"
+        "install-all": "npm install && cd client && npm install",
+        "seed": "node server/config/seeder.js",
+        "seed:clear": "node server/config/seeder.js clear",
+        "db:reset": "npm run seed:clear && npm run seed"
     },
     "keywords": [
         "examination",
         "assessment",
         "education",
-        "vanuatu"
+        "vanuatu",
+        "portal",
+        "e-learning"
     ],
     "author": "Vanuatu Ministry of Education",
     "license": "MIT",
