--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,130 @@
-# Server Configuration
+﻿# ============================================
+# VANUATU EXAMINATION PORTAL - CONFIGURATION
+# ============================================
+
+# -------------------- Server Configuration --------------------
 PORT=5000
 NODE_ENV=development
 
-# Database
+# -------------------- Database Configuration --------------------
 MONGODB_URI=mongodb://localhost:27017/vanuatu_examination_portal
 
-# JWT Secret
-JWT_SECRET=your_jwt_secret_key_here
+# -------------------- JWT Authentication --------------------
+JWT_SECRET=your_super_secret_jwt_key_change_in_production_2025
 JWT_EXPIRE=7d
 
-# Email Configuration
+# -------------------- Email Configuration --------------------
+EMAIL_SERVICE=gmail
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your_email@example.com
-EMAIL_PASSWORD=your_email_password
+EMAIL_USER=examinations@vanuatu.gov.vu
+EMAIL_PASSWORD=your_app_specific_password_here
+EMAIL_FROM=Vanuatu Examination Unit <examinations@vanuatu.gov.vu>
 
-# File Upload
+# -------------------- File Upload Configuration --------------------
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
 
-# Client URL
+# -------------------- Client Configuration --------------------
 CLIENT_URL=http://localhost:3000
 
-# Admin Credentials (Change these!)
+# -------------------- Admin Configuration --------------------
 ADMIN_EMAIL=admin@vanuatu.gov.vu
 ADMIN_PASSWORD=ChangeThisPassword123!
+ADMIN_FIRST_NAME=System
+ADMIN_LAST_NAME=Administrator
+
+# -------------------- Certificate Generation --------------------
+CERTIFICATE_ISSUER=Vanuatu Examination & Assessment Unit
+CERTIFICATE_SIGNATURE_PATH=./assets/signature.png
+CERTIFICATE_SEAL_PATH=./assets/seal.png
+
+# -------------------- Support System Configuration --------------------
+SUPPORT_EMAIL=support@vanuatu.gov.vu
+SUPPORT_PHONE=+678-123-4567
+SUPPORT_HOURS=Monday-Friday 8:00 AM - 5:00 PM (Vanuatu Time)
+SUPPORT_DEPARTMENT_TECHNICAL=Technical Support
+SUPPORT_DEPARTMENT_EXAM=Examination Unit
+SUPPORT_DEPARTMENT_REGISTRATION=Registration
+SUPPORT_DEPARTMENT_RESULTS=Results & Certificates
+SUPPORT_DEPARTMENT_FINANCE=Finance
+SUPPORT_DEPARTMENT_GENERAL=General Inquiries
+
+# -------------------- Security Incident Reporting --------------------
+WHISTLEBLOWER_PROTECTION_EMAIL=whistleblower@vanuatu.gov.vu
+INCIDENT_NOTIFICATION_EMAIL=security@vanuatu.gov.vu
+SECURITY_OFFICER_EMAIL=security.officer@vanuatu.gov.vu
+
+# -------------------- Research & Analytics --------------------
+RESEARCH_DOI_PREFIX=10.12345/vanuatu.edu
+RESEARCH_PUBLICATION_EMAIL=research@vanuatu.gov.vu
+RESEARCH_INSTITUTION=Vanuatu Ministry of Education and Training
+
+# -------------------- Policy Management --------------------
+POLICY_APPROVAL_EMAIL=policy.admin@vanuatu.gov.vu
+POLICY_ARCHIVE_PATH=./uploads/policies/archive
+
+# -------------------- Training & Professional Development --------------------
+TRAINING_CERTIFICATE_ISSUER=Vanuatu Examination & Assessment Unit
+TRAINING_COORDINATOR_EMAIL=training@vanuatu.gov.vu
+PD_CALENDAR_SYNC_ENABLED=false
+
+# -------------------- Provincial Configuration --------------------
+PROVINCE_MALAMPA_EMAIL=malampa@vanuatu.gov.vu
+PROVINCE_PENAMA_EMAIL=penama@vanuatu.gov.vu
+PROVINCE_SANMA_EMAIL=sanma@vanuatu.gov.vu
+PROVINCE_SHEFA_EMAIL=shefa@vanuatu.gov.vu
+PROVINCE_TAFEA_EMAIL=tafea@vanuatu.gov.vu
+PROVINCE_TORBA_EMAIL=torba@vanuatu.gov.vu
+
+# -------------------- SMS Configuration (Optional) --------------------
+SMS_ENABLED=false
+SMS_API_KEY=your_sms_api_key_here
+SMS_SENDER_ID=VanuatuExam
+
+# -------------------- Cloud Storage (Optional for Production) --------------------
+CLOUD_STORAGE_ENABLED=false
+CLOUD_STORAGE_PROVIDER=aws
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_BUCKET_NAME=vanuatu-exam-portal
+AWS_REGION=ap-southeast-2
+
+# -------------------- Backup Configuration --------------------
+BACKUP_ENABLED=true
+BACKUP_PATH=./backups
+BACKUP_SCHEDULE=0 2 * * *
+BACKUP_RETENTION_DAYS=30
+
+# -------------------- Logging Configuration --------------------
+LOG_LEVEL=info
+LOG_FILE_PATH=./logs
+LOG_MAX_FILES=14
+LOG_MAX_SIZE=10m
+
+# -------------------- Rate Limiting --------------------
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# -------------------- Session Configuration --------------------
+SESSION_SECRET=your_session_secret_here
+SESSION_TIMEOUT=86400000
+
+# -------------------- Feature Flags --------------------
+FEATURE_SMS_NOTIFICATIONS=false
+FEATURE_BIOMETRIC_VERIFICATION=false
+FEATURE_AI_ANALYTICS=false
+FEATURE_LIVE_CHAT=false
+FEATURE_MOBILE_APP_API=true
+
+# -------------------- Maintenance Mode --------------------
+MAINTENANCE_MODE=false
+MAINTENANCE_MESSAGE=System is under maintenance. Please check back later.
+
+# -------------------- Analytics & Monitoring --------------------
+GOOGLE_ANALYTICS_ID=UA-XXXXXXXXX-X
+SENTRY_DSN=your_sentry_dsn_here
+MONITORING_ENABLED=false
+
+# -------------------- Time Zone --------------------
+TZ=Pacific/Efate
