--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,23 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.18.0",
-        "axios": "^1.6.0",
-        "react-query": "^3.39.3",
-        "@mui/material": "^5.14.17",
-        "@mui/icons-material": "^5.14.16",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "formik": "^2.4.5",
-        "yup": "^1.3.3",
+        "@mui/icons-material": "^5.14.16",
+        "@mui/material": "^5.14.17",
+        "axios": "^1.6.0",
         "date-fns": "^2.30.0",
+        "formik": "^2.4.5",
+        "jwt-decode": "^4.0.0",
+        "lucide-react": "^0.556.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.18.0",
+        "react-toastify": "^9.1.3",
         "recharts": "^2.10.1",
         "socket.io-client": "^4.6.1",
-        "react-toastify": "^9.1.3",
-        "jwt-decode": "^4.0.0"
+        "yup": "^1.3.3"
     },
     "scripts": {
         "dev": "vite",
